[package]
name = "jaxe"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1"
termcolor = "1.1"
nom = "7.1.0"
anyhow = "1"
nom_locate = "4.0.0"
jq-rs = { version = "0.4.1", features = ["bundled"], optional = true}

[features]
default = []
jq = ["dep:jq-rs"]
